# lab001

./: MrTadeusz.txt  PanTadeusz.txt  main.py  pyproject.toml
